Elevation & line of sight

--- a/harmony/HarmonyMachine.ipynb
+++ b/harmony/HarmonyMachine.ipynb
@@ -143,10 +143,10 @@
     "\n",
     "    def captureRealCoord(self, capture):\n",
     "        \"\"\" movement distance this round \"\"\"\n",
-    "        return self.cc.rsc.changeSetToRealCenter(capture)\n",
+    "        return [*self.cc.rsc.changeSetToRealCenter(capture), self.objectElevation(capture)]\n",
     "\n",
     "    def captureSystemCoord(self, capture):\n",
-    "        return mc.XYLocation(capture.oid)\n",
+    "        return [*mc.XYLocation(capture.oid).terminant, mc.Elevation(capture.oid).terminant]\n",
     "\n",
     "    def commitChanges(self, objDef, overwrite=True):\n",
     "        try:\n",
@@ -171,7 +171,6 @@
     "            systemCoord = self.captureSystemCoord(objDef)\n",
     "            realCoord = self.captureRealCord(objDef)\n",
     "            delta = [d1 - d0 for d0, d1 in zip(systemCoord, realCoord)]\n",
-    "            delta.append(0)  # TODO: get elevation change from terrain\n",
     "            if mc.Move.can_move(objDef, delta):\n",
     "                self.declareEvent(\n",
     "                    eventType=\"Move\",\n",
@@ -179,20 +178,26 @@
     "                    eventObject=objDef.oid,\n",
     "                    eventValue=json.dumps(delta),\n",
     "                    eventResult=json.dumps(realCoord))\n",
+    "            else:\n",
+    "                raise Exception(f\"{objDef.oid} cannot move {delta}\")\n",
     "        return objDef\n",
     "\n",
     "    def takeAction(self, actor, target, result=None):\n",
     "        return ObjectAction(actor, target, result=result)\n",
     "\n",
-    "    def distanceFromRealPoint(self, harmonyObject: HarmonyObject, realPoint: (float, float)):\n",
+    "    def distanceFromRealPoint(self, harmonyObject: HarmonyObject, realPoint: (float, float, float)):\n",
     "        # TODO: object at realpoint? Elevation at realpoint?\n",
     "        objectLocation = mc.XYLocation(harmonyObject.oid).terminant\n",
-    "        return distanceFormula(objectLocation, realPoint)\n",
+    "        objectElevation = mc.Elevation(harmonyObject.oid).terminant\n",
+    "        objectPoint = [*objectLocation, objectElevation]\n",
+    "        return distanceFormula(objectPoint, realPoint)\n",
     "\n",
     "    def objectLastDistance(self, harmonyObject: HarmonyObject):\n",
     "        if mc.GameState.getPhase() == \"Move\":\n",
     "            currentLocation = self.cc.rsc.changeSetToRealCenter(harmonyObject)\n",
-    "            return self.distanceFromRealPoint(harmonyObject, currentLocation) * 0.03937008\n",
+    "            currentElevation = self.objectElevation(harmonyObject)\n",
+    "            currentPoint = [*currentLocation, currentElevation]\n",
+    "            return self.distanceFromRealPoint(harmonyObject, currentPoint) * 0.03937008\n",
     "        else:\n",
     "            return mc.DistanceMoved(harmonyObject.oid).terminant\n",
     "\n",
@@ -240,7 +245,8 @@
     "        for entity in mc.Movement.entities():\n",
     "            obj = self.findObject(entity)\n",
     "            if self.objectHasMoved(obj):\n",
-    "                mc.Move.move_to(entity=entity, newLocation=[*self.cc.rsc.changeSetToRealCenter(obj), 0])\n",
+    "                elevation = self.objectElevation(obj)\n",
+    "                mc.Move.move_to(entity=entity, newLocation=[*self.cc.rsc.changeSetToRealCenter(obj), elevation])\n",
     "        mc.GameState.newPhase(\"Move\")\n",
     "\n",
     "    def resolveRound(self):\n",
@@ -271,8 +277,13 @@
     "        return mc.GameObject(oid).terminant\n",
     "\n",
     "    def line_of_sight(self, actor: HarmonyObject, target: HarmonyObject):\n",
-    "        print(f\"Checking LoS for {actor.oid} to {target.oid}\")\n",
-    "        return self.cc.line_of_sight(actor, target, self.memory)\n",
+    "        actorPersp = [*mc.XYLocation(actor.oid).terminant, mc.Elevation(actor.oid).terminant]\n",
+    "        targetPersp = [*mc.XYLocation(target.oid).terminant, mc.Elevation(target.oid).terminant]\n",
+    "\n",
+    "        perspElevation = max(actorPersp[2], targetPersp[2])\n",
+    "        visualObstacles = [m for m in self.memory if mc.Elevation(m.oid).terminant >= perspElevation]\n",
+    "\n",
+    "        return self.cc.line_of_sight(actor, target, visualObstacles)\n",
     "\n",
     "    def buildMiniMap(self, yellowObjects=None, blueObjects=None, greenObjects=None):\n",
     "        return self.cc.buildMiniMap(yellowObjects=yellowObjects, blueObjects=blueObjects, greenObjects=greenObjects)\n",
@@ -287,9 +298,17 @@
     "\n",
     "    def objectElevation(self, obj):\n",
     "        terrainAndBuildings = [m for m in self.memory if self.object_type(m.oid) in [\"Terrain\", \"Structure\"]]\n",
-    "        # Determine overlaps\n",
-    "        overlap = None\n",
-    "        return 0 if overlap is None else mc.Elevation(overlap.oid).terminant\n",
+    "        overlaps = []\n",
+    "        for cam, changeSet in obj.changeSet.items():\n",
+    "            for tOrB in terrainAndBuildings:\n",
+    "                tOrBChangeSet = tOrB.changeSet[cam]\n",
+    "                if tOrBChangeSet is not None and tOrBChangeSet.changeOverlap(changeSet):\n",
+    "                    if tOrB not in overlaps:\n",
+    "                        overlaps.append(tOrB)\n",
+    "        if overlaps:\n",
+    "            return mc.Elevation(overlaps[0].oid).terminant + 1\n",
+    "        else:\n",
+    "            return 1\n",
     "    \n",
     "    @staticmethod\n",
     "    def numpy_serializer(obj):\n",
