--- a/harmony/dma/MechaCombat/MechaCombatSystem.ipynb
+++ b/harmony/dma/MechaCombat/MechaCombatSystem.ipynb
@@ -89,7 +89,7 @@
     "\n",
     "    @classmethod\n",
     "    def incrementRoundCount(cls):\n",
-    "        count = int(RoundCount.get_relationship(cls.__name__))\n",
+    "        count = int(RoundCount.get_relationship(cls.__name__) or 0)\n",
     "        QuantumSystem.replace(cls.__name__, RoundCount, str(count), str(count + 1))\n",
     "\n",
     "    @classmethod\n",
@@ -131,6 +131,7 @@
     "                Move.move(entity=gameeventobject, delta=json.loads(gameeventresult))\n",
     "            case \"Attack\":\n",
     "                print(f\"{gameeventvalue} taking damage {gameeventresult}\")\n",
+    "                # TODO: Is gameeventresult greater than sator? If so, take weapon damage at range\n",
     "                UnitDamage.take_damage(entity=gameeventvalue, damage_value=int(gameeventresult))\n",
     "            case \"NoAction\":\n",
     "                print(f\"{gameeventobject} taking no action\")\n",
