--- a/harmony/dma/MechaCombat/MovementSystem.ipynb
+++ b/harmony/dma/MechaCombat/MovementSystem.ipynb
@@ -118,6 +118,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "b2d149af-714c-468a-a4ea-df2fcf2935b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class TerrainDifficulty(FloatSystem):\n",
+    "    \"\"\" Terrain Difficulty from in the XY plane \"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "id": "f670389b-5619-4e03-9832-dfe66a35ed38",
    "metadata": {},
@@ -128,32 +139,35 @@
     "@Movement.sd\n",
     "class Move(HyperSystem):\n",
     "    @classmethod\n",
-    "    @Elevation.d\n",
-    "    @XYLocation.d\n",
-    "    @Movement.MovementSpeed.d\n",
-    "    def can_move(cls, entity, delta, movementspeed, xylocation, elevation):\n",
-    "        xyz = json.dumps(xylocation + [elevation])\n",
-    "        deltaDistance = sum([d * d for d in delta]) ** 0.5\n",
-    "\n",
-    "        if deltaDistance > movementspeed:\n",
-    "            raise MovementSpeed.MovementSpeedViolation(f\"Cannot move unit further ({deltaDistance}) than its movement speed ({movementspeed})\")\n",
-    "        return True\n",
+    "    def movement_cost(cls, delta: list[float, float, float]) -> float:\n",
+    "        horizontalDistance = sum([d * d for d in delta[:2]]) ** 0.5\n",
+    "        verticalDistance = delta[2] * 2\n",
+    "        totalCost = (horizontalDistance + verticalDistance) * 0.03937008\n",
+    "        return totalCost\n",
     "\n",
     "    @classmethod\n",
     "    @Elevation.d\n",
     "    @XYLocation.d\n",
     "    @Movement.MovementSpeed.d\n",
-    "    def move(cls, entity, delta, movementspeed, xylocation, elevation):\n",
-    "        xyz = [*xylocation, elevation]\n",
-    "        deltaDistanceInches = (sum([d * d for d in delta]) ** 0.5) * 0.03937008\n",
+    "    def can_move(cls, entity: str, delta: list[float, float, float], movementspeed, xylocation, elevation):\n",
+    "        movement_cost = cls.movement_cost(delta)\n",
+    "        return cls.movement_cost(delta) <= movementspeed\n",
     "\n",
-    "        if deltaDistanceInches > movementspeed:\n",
-    "            raise MovementSpeed.MovementSpeedViolation(f\"Cannot move unit further ({deltaDistanceInches}) than its movement speed ({movementspeed})\")\n",
+    "    @classmethod\n",
+    "    @Elevation.d\n",
+    "    @XYLocation.d\n",
+    "    @Movement.MovementSpeed.d\n",
+    "    def move(cls, entity: str, delta: list[float, float, float], movementspeed, xylocation, elevation):\n",
+    "        xyz = [*xylocation, elevation]\n",
+    "        movement_cost = cls.movement_cost(delta)\n",
+    "\n",
+    "        if movement_cost > movementspeed:\n",
+    "            raise MovementSpeed.MovementSpeedViolation(f\"Cannot move unit further ({movement_cost}) than its movement speed ({movementspeed})\")\n",
     "\n",
     "        newLocation = [sL + lD for sL, lD in zip(xyz, delta)]\n",
     "        xy = newLocation[:2]\n",
     "        z = newLocation[2]\n",
-    "        DistanceMoved.set_relationship(entity, deltaDistanceInches)\n",
+    "        DistanceMoved.set_relationship(entity, movement_cost)\n",
     "        XYLocation.set_relationship(entity, xy)\n",
     "        Elevation.set_relationship(entity, z)\n",
     "\n",
