--- a/harmony/dma/MechaCombat/StructureSystem.ipynb
+++ b/harmony/dma/MechaCombat/StructureSystem.ipynb
@@ -37,9 +37,12 @@
     "    \n",
     "    @classmethod\n",
     "    def buildStructureFactory(cls, **systemDefaults):\n",
-    "        return partial(\n",
-    "            cls,\n",
-    "            **systemDefaults)"
+    "        def newStructureFactory(structureName, faction=\"Unaligned\", elevation=5, xylocation=None):\n",
+    "            systemDefaults[\"Faction\"] = faction\n",
+    "            systemDefaults[\"Elevation\"] = elevation\n",
+    "            systemDefaults[\"XYLocation\"] = xylocation or [0, 0]\n",
+    "            return cls(structureName, **systemDefaults)\n",
+    "        return newStructureFactory"
    ]
   },
   {
@@ -92,6 +95,14 @@
     "        return partial(\n",
     "            cls,\n",
     "            **systemDefaults)\n",
+    "    \n",
+    "    @classmethod\n",
+    "    def buildTerrainFactory(cls, **systemDefaults):\n",
+    "        def newTerrainFactory(terrainName, elevation=5, xylocation=None):\n",
+    "            systemDefaults[\"Elevation\"] = elevation\n",
+    "            systemDefaults[\"XYLocation\"] = xylocation or [0, 0]\n",
+    "            return cls(terrainName, **systemDefaults)\n",
+    "        return newTerrainFactory\n",
     "\n",
     "\n",
     "TerrainFactories = {\n",
