--- a/harmony/observer/CalibratedObserver.ipynb
+++ b/harmony/observer/CalibratedObserver.ipynb
@@ -45,6 +45,8 @@
    "outputs": [],
    "source": [
     "def distanceFormula(pt0, pt1):\n",
+    "    if len(pt0) != len(pt1):\n",
+    "        raise Exception(f\"Cannot compute distance for dimensions: {len(pt0)} vs. {len(pt1)}\")\n",
     "    return sum([(pt1[i] - pt0[i])**2 for i in range(len(pt0))]) ** 0.5\n",
     "\n",
     "\n",
