--- a/harmony/HarmonyMachine.ipynb
+++ b/harmony/HarmonyMachine.ipynb
@@ -96,6 +96,7 @@
     "            self.targetNumber = None\n",
     "            self.gameEvent = None\n",
     "            return\n",
+    "        # TODO: get distance from graph XY, Elevation instead\n",
     "        self.targetDistance = self.rsc.distanceBetweenObjects(self.actor, self.target)\n",
     "        self.targetRange = \"short\" if self.targetDistance < 155 else \"medium\" if self.targetDistance < 610 else \"long\"\n",
     "        self.rangeModifier = 0 if \"short\" else 2 if \"medium\" else 4\n",
@@ -109,7 +110,7 @@
     "        self.gameEvent = None\n",
     "\n",
     "    def declare(self):\n",
-    "        self.gameEvent = GameEvent.declareEvent(\"Attack\", \"Unaligned\", self.actor.oid, self.target.oid, self.result)\n",
+    "        self.gameEvent = GameEvent.declareEvent(\"Attack\", mc.Faction(self.actor.oid).terminant, self.actor.oid, self.target.oid, self.targetNumber, self.result)\n",
     "\n",
     "    def resolve(self, result):\n",
     "        self.gameEvent.resolve(result)"
@@ -129,8 +130,8 @@
     "        self.GameState = mc.GameState\n",
     "        ObjectAction.rsc = self.cc.rsc\n",
     "\n",
-    "    def declareEvent(self, eventType: str, eventFaction: str, eventObject: str, eventValue: str, eventResult: str):\n",
-    "        mc.GameState.declareEvent(eventType, eventFaction, eventObject, eventValue, eventResult)\n",
+    "    def declareEvent(self, eventType: str, eventFaction: str, eventObject: str, eventValue: str, eventTarget: float, eventResult: str):\n",
+    "        mc.GameState.declareEvent(eventType, eventFaction, eventObject, eventValue, eventTarget, eventResult)\n",
     "    \n",
     "    def classifyObject(self, objectId: str, objectType: str, objectSubType:str , objectKwargs: dict):\n",
     "        trackedObject = self.findObject(objectId)\n",
@@ -177,6 +178,7 @@
     "                    eventFaction=mc.Faction(objDef.oid),\n",
     "                    eventObject=objDef.oid,\n",
     "                    eventValue=json.dumps(delta),\n",
+    "                    eventTarget=mc.MovementSpeed(objDef.oid).terminant,\n",
     "                    eventResult=json.dumps(realCoord))\n",
     "            else:\n",
     "                raise Exception(f\"{objDef.oid} cannot move {delta}\")\n",
@@ -185,18 +187,19 @@
     "    def takeAction(self, actor, target, result=None):\n",
     "        return ObjectAction(actor, target, result=result)\n",
     "\n",
+    "    def objectLocation(self, harmonyObject):\n",
+    "        if mc.GameState.getPhase() == \"Move\":\n",
+    "            return self.captureRealCoord(harmonyObject)\n",
+    "        else:\n",
+    "            return [*mc.XYLocation(harmonyObject.oid).terminant, mc.Elevation(harmonyObject.oid).terminant]\n",
+    "\n",
     "    def distanceFromRealPoint(self, harmonyObject: HarmonyObject, realPoint: (float, float, float)):\n",
-    "        # TODO: object at realpoint? Elevation at realpoint?\n",
-    "        objectLocation = mc.XYLocation(harmonyObject.oid).terminant\n",
-    "        objectElevation = mc.Elevation(harmonyObject.oid).terminant\n",
-    "        objectPoint = [*objectLocation, objectElevation]\n",
+    "        objectPoint = [*mc.XYLocation(harmonyObject.oid).terminant, mc.Elevation(harmonyObject.oid).terminant]\n",
     "        return distanceFormula(objectPoint, realPoint)\n",
     "\n",
     "    def objectLastDistance(self, harmonyObject: HarmonyObject):\n",
     "        if mc.GameState.getPhase() == \"Move\":\n",
-    "            currentLocation = self.cc.rsc.changeSetToRealCenter(harmonyObject)\n",
-    "            currentElevation = self.objectElevation(harmonyObject)\n",
-    "            currentPoint = [*currentLocation, currentElevation]\n",
+    "            currentPoint = self.captureRealCoord(harmonyObject)\n",
     "            return self.distanceFromRealPoint(harmonyObject, currentPoint) * 0.03937008\n",
     "        else:\n",
     "            return mc.DistanceMoved(harmonyObject.oid).terminant\n",
