Color code factions on minimap and camera views

--- a/harmony/HarmonyMachine.ipynb
+++ b/harmony/HarmonyMachine.ipynb
@@ -10,9 +10,11 @@
    "outputs": [],
    "source": [
     "import json\n",
+    "import random\n",
     "from dataclasses import dataclass, asdict\n",
     "import numpy as np\n",
-    "from observer import CalibratedObserver, CameraChange, TrackedObject, CalibratedCaptureConfiguration, Transition, distanceFormula\n",
+    "import cv2\n",
+    "from observer import CalibratedObserver, CameraChange, TrackedObject, MiniMapObject, CalibratedCaptureConfiguration, Transition, distanceFormula\n",
     "import dma.MechaCombat as mc\n",
     "from dma.MechaCombat import GameEvent, GameState, Skill, Mech\n",
     "QuantumSystem = mc.QuantumSystem\n",
@@ -239,7 +241,7 @@
     "        return False\n",
     "\n",
     "    def actionsToResolve(self):\n",
-    "        declared_actions = len(app.cm.unitsDeclaredThisRound())\n",
+    "        declared_actions = len(self.unitsDeclaredThisRound())\n",
     "        no_actions = len(GameEvent.get_declared_no_action_events())\n",
     "        return declared_actions - no_actions\n",
     "\n",
@@ -288,8 +290,17 @@
     "\n",
     "        return self.cc.line_of_sight(actor, target, visualObstacles)\n",
     "\n",
-    "    def buildMiniMap(self, yellowObjects=None, blueObjects=None, greenObjects=None):\n",
-    "        return self.cc.buildMiniMap(yellowObjects=yellowObjects, blueObjects=blueObjects, greenObjects=greenObjects)\n",
+    "    @property\n",
+    "    def objectsAndColors(self):\n",
+    "        factions = self.factions()\n",
+    "        factionColors = {faction: color for faction, color in zip(factions, self.distinct_colors(len(factions)))}\n",
+    "        factionColors[\"Unaligned\"] = (255, 0, 0)\n",
+    "        return [\n",
+    "            MiniMapObject(mem, factionColors[self.faction(mem.oid)] if mem != self.lastClassification else (0, 255, 0))\n",
+    "            for mem in self.memory]\n",
+    "\n",
+    "    def buildMiniMap(self):\n",
+    "        return self.cc.buildMiniMap(objectsAndColors=self.objectsAndColors)\n",
     "\n",
     "    def changeOverlaps(self, camera, change):\n",
     "        changes = [m.changeSet[camera.camName] for m in self.memory if self.object_type(m.oid) in [None, \"Unit\"]]\n",
@@ -342,7 +353,66 @@
     "        for m in gameData['objectMemory']:\n",
     "            m['changeSet'] = {cam: self.numpyizeDeserializedCameraChange(camChange) for cam, camChange in m['changeSet'].items()}\n",
     "        self.memory = [HarmonyObject(**m) for m in gameData['objectMemory']]\n",
-    "        mc.qs.graph.mass_put(gameData['gameGraph'])"
+    "        mc.qs.graph.mass_put(gameData['gameGraph'])\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def contrast_color(bg=(139, 69, 19)):  # Brown background\n",
+    "        \"\"\" Generate a color with good contrast against a given background. \"\"\"\n",
+    "\n",
+    "    def distinct_colors(self, n=15):\n",
+    "        \"\"\" Generate n distinct colors that stand out against brown. \"\"\"\n",
+    "        if n > 1 and len(getattr(self, \"_colors\", [])) == n:\n",
+    "            return self._colors\n",
+    "        colors = set()\n",
+    "        contrast_colors = [(139, 69, 19), (204, 100, 2)]\n",
+    "        while len(colors) < n:\n",
+    "            color = None\n",
+    "            for i in range(10):\n",
+    "                r, g, b = (random.randint(50, 230) for _ in range(3))  # Exclude near black/white\n",
+    "                \n",
+    "                calc_contrast = lambda r, g, b, bg: abs(r - bg[0]) + abs(g - bg[1]) + abs(b - bg[2])\n",
+    "                contrasts = [calc_contrast(r, g, b, c) for c in contrast_colors + list(colors)]\n",
+    "                if sum([contrast > 200 for contrast in contrasts]) > len(colors) * 0.5:  # Ensure high contrast\n",
+    "                    color = (r, g, b)\n",
+    "                    break\n",
+    "            if color is None:\n",
+    "                raise Exception(f\"Failed to generate color within 10 cycles\")\n",
+    "            colors.add((r, g, b))\n",
+    "        self._colors = list(colors)\n",
+    "        return self._colors\n",
+    "    \n",
+    "    def getCameraImagesWithChanges(self, cameraKeys=None):\n",
+    "        if cameraKeys is None:\n",
+    "            cameraKeys = self.cc.cameras.keys()\n",
+    "\n",
+    "        images = {}\n",
+    "        for camName in cameraKeys:\n",
+    "            cam = self.cc.cameras[camName]\n",
+    "            camImage = cam.cropToActiveZone(cam.mostRecentFrame.copy())\n",
+    "            # Paint last changes red\n",
+    "            if self.lastChanges is not None and not self.lastChanges.empty:\n",
+    "                lastChange = self.lastChanges.changeSet[camName]\n",
+    "                if lastChange is not None and lastChange.changeType not in ['delete', None]:\n",
+    "                    lastChangeContour = np.array([lastChange.changePoints], dtype=np.int32)\n",
+    "                    camImage = cv2.drawContours(camImage, lastChangeContour, -1 , (0, 0, 127), -1)\n",
+    "            # Paint classification green\n",
+    "            if self.lastClassification is not None and not self.lastClassification.empty:\n",
+    "                lastClass = self.lastClassification.changeSet[camName]\n",
+    "                if lastClass is not None and lastClass.changeType not in ['delete', None]:\n",
+    "                    lastClassContour = np.array([lastClass.changePoints], dtype=np.int32)\n",
+    "                    camImage = cv2.drawContours(camImage, lastClassContour, -1 , (0, 255, 0), -1)\n",
+    "            \n",
+    "            # Paint known objects faction color\n",
+    "            for objAndColor in self.objectsAndColors:\n",
+    "                memObj = objAndColor.object\n",
+    "                color = objAndColor.color\n",
+    "                if memObj.changeSet[camName].changeType not in ['delete', None]:\n",
+    "                    memContour = np.array([memObj.changeSet[camName].changePoints], dtype=np.int32)\n",
+    "                    camImage = cv2.drawContours(camImage, memContour, -1, color, -1)\n",
+    "                    \n",
+    "            camImage = cv2.resize(camImage, [480, 640], interpolation=cv2.INTER_AREA)\n",
+    "            images[camName] = camImage\n",
+    "        return images"
    ]
   },
   {
