--- a/harmony/observer/CalibratedObserver.ipynb
+++ b/harmony/observer/CalibratedObserver.ipynb
@@ -438,6 +438,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "b051c8e1-1e18-4417-83a0-b4f82c4e7605",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@dataclass\n",
+    "class MiniMapObject:\n",
+    "    object: TrackedObject\n",
+    "    color: tuple[int, int, int]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "id": "88aff072-ee60-45dd-9f04-601b95845608",
    "metadata": {},
@@ -493,7 +506,7 @@
     "        contours, _ = cv2.findContours(contourOverlap, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)\n",
     "        return contours[-1]\n",
     "\n",
-    "    def buildMiniMap(self, yellowObjects=None, blueObjects=None, greenObjects=None):\n",
+    "    def buildMiniMap(self, objectsAndColors: list[MiniMapObject]):\n",
     "        image = np.zeros([1200, 1200, 3], dtype=\"uint8\")\n",
     "        if self.rsc is None:\n",
     "            return image\n",
@@ -516,19 +529,13 @@
     "            return image\n",
     "        x, y, w, h = self.realSpaceBoundingBox\n",
     "\n",
-    "        yellowObjects = [] if yellowObjects is None else yellowObjects\n",
-    "        blueObjects = [] if blueObjects is None else blueObjects\n",
-    "        greenObjects = [] if greenObjects is None else greenObjects\n",
-    "        objsAndColors = \\\n",
-    "              [[yellowies, (0, 255, 255)] for yellowies in yellowObjects] \\\n",
-    "            + [[blueies, (255, 0, 0)] for blueies in blueObjects] \\\n",
-    "            + [[greenies, (0, 255, 0)] for greenies in greenObjects]\n",
-    "\n",
-    "        print(\"Minimap has: \" + str(len(objsAndColors)))\n",
-    "        if len(objsAndColors) == 0:\n",
+    "        print(f\"Minimap has {len(objectsAndColors)} objects\")\n",
+    "        if len(objectsAndColors) == 0:\n",
     "            return image[y:y+h, x:x+w]\n",
     "        drawnObjs = []\n",
-    "        for obj, color in objsAndColors[::-1]:\n",
+    "        for objAndColor in objectsAndColors[::-1]:\n",
+    "            obj = objAndColor.object\n",
+    "            color = objAndColor.color\n",
     "            if obj in drawnObjs:\n",
     "                continue\n",
     "            drawnObjs.append(obj)\n",
