Add color coding for interactivity

--- a/harmony/HarmonyMachine.ipynb
+++ b/harmony/HarmonyMachine.ipynb
@@ -296,7 +296,7 @@
     "        factionColors = {faction: color for faction, color in zip(factions, self.distinct_colors(len(factions)))}\n",
     "        factionColors[\"Unaligned\"] = (255, 0, 0)\n",
     "        return [\n",
-    "            MiniMapObject(mem, factionColors[self.faction(mem.oid)] if mem != self.lastClassification else (0, 255, 0))\n",
+    "            MiniMapObject(mem, factionColors[self.faction(mem.oid)] if mem != self.lastClassification and not self.objectCouldInteract(mem) else (0, 255, 0))\n",
     "            for mem in self.memory]\n",
     "\n",
     "    def buildMiniMap(self):\n",
@@ -364,15 +364,14 @@
     "        if n > 1 and len(getattr(self, \"_colors\", [])) == n:\n",
     "            return self._colors\n",
     "        colors = set()\n",
-    "        contrast_colors = [(139, 69, 19), (204, 100, 2)]\n",
+    "        contrast_colors = [(139, 69, 19), (204, 100, 2), (0, 255, 0)]\n",
+    "        calc_contrast = lambda r, g, b, bg: abs(r - bg[0]) + abs(g - bg[1]) + abs(b - bg[2])\n",
     "        while len(colors) < n:\n",
     "            color = None\n",
     "            for i in range(10):\n",
     "                r, g, b = (random.randint(50, 230) for _ in range(3))  # Exclude near black/white\n",
-    "                \n",
-    "                calc_contrast = lambda r, g, b, bg: abs(r - bg[0]) + abs(g - bg[1]) + abs(b - bg[2])\n",
     "                contrasts = [calc_contrast(r, g, b, c) for c in contrast_colors + list(colors)]\n",
-    "                if sum([contrast > 200 for contrast in contrasts]) > len(colors) * 0.5:  # Ensure high contrast\n",
+    "                if sum([contrast > 200 for contrast in contrasts]) >= len(contrast_colors + list(colors)):  # Ensure high contrast\n",
     "                    color = (r, g, b)\n",
     "                    break\n",
     "            if color is None:\n",
@@ -412,7 +411,16 @@
     "                    \n",
     "            camImage = cv2.resize(camImage, [480, 640], interpolation=cv2.INTER_AREA)\n",
     "            images[camName] = camImage\n",
-    "        return images"
+    "        return images\n",
+    "\n",
+    "    def objectCouldInteract(self, obj: TrackedObject):\n",
+    "        match self.GameState.getPhase():\n",
+    "            case \"Move\":\n",
+    "                return not self.objectHasMoved(obj)\n",
+    "            case \"Declare\":\n",
+    "                return not self.objectHasDeclared(obj)\n",
+    "            case \"Action\":\n",
+    "                return not self.objectHasResolved(obj)"
    ]
   },
   {
